compile-errors.txt
To honour the JVM settings for this build a single-use Daemon process will be forked. For more on this, please refer to https://docs.gradle.org/8.5/userguide/gradle_daemon.html#sec:disabling_the_daemon in the Gradle documentation.
Daemon will be stopped at the end of the build 

> Task :compileJava FAILED
.\gradlew.bat : C:\Users\Lake\Desktop\sim
pletpa-mod\src\main\java\com\lake\simplet
pa\WarmupManager.java:99: error: cannot 
find symbol
En l?nea: 1 Car?cter: 1
+ .\gradlew.bat compileJava --no-daemon 
2>&1 | Out-File -Encoding ASCII ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~
    + CategoryInfo          : NotSpecifi 
   ed: (C:\Users\Lake\D...not find symb  
  ol:String) [], RemoteException
    + FullyQualifiedErrorId : NativeComm 
   andError
 
                
MessageUtils.send(player, TpaConfig.MESSA
GES.warmupCancelled.get());
                ^
  symbol:   variable MessageUtils
  location: class WarmupManager
C:\Users\Lake\Desktop\simpletpa-mod\src\m
ain\java\com\lake\simpletpa\WarmupManager
.java:134: error: cannot find symbol
        MessageUtils.send(player, 
TpaConfig.MESSAGES.teleporting.get());
        ^
  symbol:   variable MessageUtils
  location: class WarmupManager
C:\Users\Lake\Desktop\simpletpa-mod\src\m
ain\java\com\lake\simpletpa\WarmupManager
.java:141: error: cannot find symbol
            MessageUtils.send(target, 
message);
            ^
  symbol:   variable MessageUtils
  location: class WarmupManager
3 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler 
error output for details.

* Try:
> Run with --info option to get more log 
output.
> Run with --scan to get full insights.

BUILD FAILED in 10s
1 actionable task: 1 executed
